Add more generative models in translations

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -646,6 +646,9 @@
 	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Modèle privé multilingue Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
+	"stash.config.option.nuclia-atlas-v1": "Atlas",
+	"stash.config.option.nuclia-etna-v1": "Etna",
+	"stash.config.option.nuclia-everest-v1": "Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utiliser sa propre clé",
 	"stash.config.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
