--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -645,6 +645,9 @@
 	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
+	"stash.config.option.nuclia-atlas-v1": "Atlas",
+	"stash.config.option.nuclia-etna-v1": "Etna",
+	"stash.config.option.nuclia-everest-v1": "Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilitzar key pròpia",
 	"stash.config.success": "La nova configuració s'ha desat correctament.",
