--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -646,6 +646,9 @@
 	"stash.config.option.cohere": "Cohere (Beta)",
 	"stash.config.option.generative-multilingual-2023": "Mehrsprachiges Privatmodell von Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "mehrsprachig (alpha)",
+	"stash.config.option.nuclia-atlas-v1": "Atlas",
+	"stash.config.option.nuclia-etna-v1": "Etna",
+	"stash.config.option.nuclia-everest-v1": "Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Eigenen Schlüssel verwenden",
 	"stash.config.success": "Die neuen Einstellungen wurden erfolgreich gespeichert.",
