--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -646,6 +646,9 @@
 	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
+	"stash.config.option.nuclia-atlas-v1": "Atlas",
+	"stash.config.option.nuclia-etna-v1": "Etna",
+	"stash.config.option.nuclia-everest-v1": "Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Use own key",
 	"stash.config.success": "The new settings have been saved successfully.",
