--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -646,6 +646,9 @@
 	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Modelo privado multilíngue Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "multilíngue (alpha)",
+	"stash.config.option.nuclia-atlas-v1": "Atlas",
+	"stash.config.option.nuclia-etna-v1": "Etna",
+	"stash.config.option.nuclia-everest-v1": "Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Usar chave própria",
 	"stash.config.success": "As novas configurações foram salvas com sucesso.",
