--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -783,6 +783,8 @@
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.filter.label": "Filtre",
 	"stash.widgets.filter_type": "Tipus de filtre",
+	"stash.widgets.filterByLabelFamily.help": "Aquesta opció només té efecte si el filtratge d'etiquetes està habilitat",
+	"stash.widgets.filterByLabelFamily.label": "Permet el filtratge per família d'etiquetes",
 	"stash.widgets.hideLogo.help": "Amagar el logotip de Nuclia de la barra de cerca",
 	"stash.widgets.hideLogo.label": "Amagar logotip",
 	"stash.widgets.hideSources.help": "Amaga les fonts utilitzades per generar la resposta",
