--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -784,6 +784,8 @@
 	"stash.widgets.filter.help": "Displays filters in search bar",
 	"stash.widgets.filter.label": "Filter",
 	"stash.widgets.filter_type": "Filter types",
+	"stash.widgets.filterByLabelFamily.help": "This option only has effect if label filtering is enabled",
+	"stash.widgets.filterByLabelFamily.label": "Allow filtering by label family",
 	"stash.widgets.hideLogo.help": "Hide Nuclia logo from search bar",
 	"stash.widgets.hideLogo.label": "Hide logo",
 	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
