--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -783,6 +783,8 @@
 	"stash.widgets.filter.help": "Muestra filtros en la barra de búsqueda",
 	"stash.widgets.filter.label": "Filtrar",
 	"stash.widgets.filter_type": "Tipos de filtro",
+	"stash.widgets.filterByLabelFamily.help": "Esta opción solo tiene efecto si el filtrado de etiquetas está habilitado",
+	"stash.widgets.filterByLabelFamily.label": "Permitir filtrado por familia de etiquetas",
 	"stash.widgets.hideLogo.help": "Ocultar el logotipo de Nuclia de la barra de búsqueda",
 	"stash.widgets.hideLogo.label": "Ocultar logotipo",
 	"stash.widgets.hideSources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
