[sc-7748] Don't load all KBs from all accounts after login

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -680,7 +680,7 @@
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La Knowledge Box encara està buida!",
 	"stash.enable_stash_email": "Habilitar correu electrònic",
-	"stash.home.link": "Tauler d'inici",
+	"stash.home.link": "Inici",
 	"stash.home.upload-block.description": "Carregueu fitxers, carpetes, enllaços",
 	"stash.home.upload-block.description-desktop": " o trieu una font per treballar amb Nuclia amb la vostra pròpia base de dades.",
 	"stash.home.upload-block.title": "Treballa amb les teves dades",
@@ -690,7 +690,7 @@
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Knowledge Box",
-	"stash.name_your_kb": "Anomena el teu KB",
+	"stash.name_your_kb": "Anomena el teu Knowledge Box",
 	"stash.new_service_access_token": "Creeu una nova clau d'API",
 	"stash.no_knowledge_boxes": "No hi ha cap cas de Knowledge Boxes en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
