--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -681,7 +681,7 @@
 	"stash.email": "E-Mail-Server",
 	"stash.empty_kb": "Die Knowledge Box ist leer",
 	"stash.enable_stash_email": "E-Mail aktivieren",
-	"stash.home.link": "Start-Dashboard",
+	"stash.home.link": "Startseite",
 	"stash.home.upload-block.description": "Laden Sie Dateien, Ordner und Links hoch",
 	"stash.home.upload-block.description-desktop": " oder wählen Sie eine Quelle, um mit Nuclia mit Ihrer eigenen Datenbank zu arbeiten.",
 	"stash.home.upload-block.title": "Arbeiten Sie mit Ihren Daten",
@@ -691,7 +691,7 @@
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Benutzer verwalten",
 	"stash.name": "Name der Knowledge Box",
-	"stash.name_your_kb": "Benennen Sie Ihre KB",
+	"stash.name_your_kb": "Benennen Sie Ihre Knowledge Box",
 	"stash.new_service_access_token": "Erstellen Sie einen neuen API-Schlüssel",
 	"stash.no_knowledge_boxes": "In diesem Konto sind keine Knowledge Boxes vorhanden",
 	"stash.preferences.receive_help": "Hilfe erhalten",
