--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -681,7 +681,7 @@
 	"stash.email": "Email server",
 	"stash.empty_kb": "The Knowledge Box is empty",
 	"stash.enable_stash_email": "Enable email",
-	"stash.home.link": "Home dashboard",
+	"stash.home.link": "Home",
 	"stash.home.upload-block.description": "Upload files, folders, links",
 	"stash.home.upload-block.description-desktop": " or choose a source to work with Nuclia with your own database.",
 	"stash.home.upload-block.title": "Work with your data",
@@ -691,7 +691,7 @@
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Manage users",
 	"stash.name": "Knowledge Box name",
-	"stash.name_your_kb": "Name your KB",
+	"stash.name_your_kb": "Name your Knowledge Box",
 	"stash.new_service_access_token": "Create a new API key",
 	"stash.no_knowledge_boxes": "There are no Knowledge Boxes in this account",
 	"stash.preferences.receive_help": "Received help",
