--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -680,7 +680,7 @@
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La Knowledge Box aun está vacía!",
 	"stash.enable_stash_email": "Habilitar correo electrónico",
-	"stash.home.link": "Panel de inicio",
+	"stash.home.link": "Inicio",
 	"stash.home.upload-block.description": "Subir archivos, carpetas, enlaces.",
 	"stash.home.upload-block.description-desktop": " o elige una fuente para trabajar con Nuclia con tu propia base de datos.",
 	"stash.home.upload-block.title": "Trabaja con tus datos",
@@ -690,7 +690,7 @@
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
 	"stash.name": "Nombre de la Knowledge Box",
-	"stash.name_your_kb": "Nombra tu base de conocimiento",
+	"stash.name_your_kb": "Nombra tu Knowledge Box",
 	"stash.new_service_access_token": "Crear una nueva clave API",
 	"stash.no_knowledge_boxes": "No hay Knowledge Boxes en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
