--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -681,7 +681,7 @@
 	"stash.email": "Serveur de messagerie",
 	"stash.empty_kb": "La Knowledge Box est vide",
 	"stash.enable_stash_email": "Activer l'e-mail",
-	"stash.home.link": "Tableau de bord d'accueil",
+	"stash.home.link": "Accueil",
 	"stash.home.upload-block.description": "Téléchargez des fichiers, des dossiers, des liens",
 	"stash.home.upload-block.description-desktop": " ou choisissez une source pour travailler avec Nuclia avec votre propre base de données.",
 	"stash.home.upload-block.title": "Travaillez avec vos données",
@@ -691,7 +691,7 @@
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Gérer les utilisateurs",
 	"stash.name": "Nom de la Knowledge Box",
-	"stash.name_your_kb": "Nommez votre base de connaissances",
+	"stash.name_your_kb": "Nommez votre Knowledge Box",
 	"stash.new_service_access_token": "Créer une nouvelle clé API",
 	"stash.no_knowledge_boxes": "Il n'y a pas de Knowledge Boxes dans ce compte",
 	"stash.preferences.receive_help": "Reçu de l'aide",
