--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -681,7 +681,7 @@
 	"stash.email": "Servidor de e-mail",
 	"stash.empty_kb": "A Knowledge Box está vazia",
 	"stash.enable_stash_email": "Ativar e-mail",
-	"stash.home.link": "Painel Inicial",
+	"stash.home.link": "Casa",
 	"stash.home.upload-block.description": "Carregar arquivos, pastas, links",
 	"stash.home.upload-block.description-desktop": " ou escolha uma fonte para trabalhar com a Nuclia com seu próprio banco de dados.",
 	"stash.home.upload-block.title": "Trabalhe com seus dados",
@@ -691,7 +691,7 @@
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gerenciar usuários",
 	"stash.name": "Nome da Knowledge Box",
-	"stash.name_your_kb": "Nomeie sua base de conhecimento",
+	"stash.name_your_kb": "Nomeie sua Knowledge Box",
 	"stash.new_service_access_token": "Crie uma nova chave de API",
 	"stash.no_knowledge_boxes": "Não há Knowledge Boxes nesta conta",
 	"stash.preferences.receive_help": "Ajuda recebida",
