Allow to filter by creation date

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -37,8 +37,13 @@
 	"generic.cancel": "Cancel·lar",
 	"generic.save": "Guardar",
 	"input.clear": "Esborra la cerca",
+	"input.created_from": "Creat a partir de",
+	"input.created_to": "Creat fins al",
+	"input.date_created": "Data de creació",
+	"input.from": "Des del",
 	"input.more_filters": "{{count}} filtres més",
 	"input.placeholder": "Escriviu la vostra pregunta aquí",
+	"input.to": "Fins al",
 	"modal.back": "Tornar",
 	"resource.classification": "Classificació",
 	"resource.creation": "Data de creació",
