--- a/libs/search-widget/public/i18n/de.json
+++ b/libs/search-widget/public/i18n/de.json
@@ -37,8 +37,13 @@
 	"generic.cancel": "Stornieren",
 	"generic.save": "Sparen",
 	"input.clear": "Saubere Suche",
+	"input.created_from": "Erstellt am",
+	"input.created_to": "Gemaakt tot",
+	"input.date_created": "Datum erstellt",
+	"input.from": "Ab",
 	"input.more_filters": "{{count}} weitere Filter",
 	"input.placeholder": "Geben Sie ihre Frage hier ein",
+	"input.to": "Tot",
 	"modal.back": "Zurück",
 	"resource.classification": "Einstufung",
 	"resource.creation": "Erstelldatum",
