--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -38,8 +38,13 @@
 	"generic.cancel": "Cancel",
 	"generic.save": "Save",
 	"input.clear": "Clear search",
+	"input.created_from": "Created from",
+	"input.created_to": "Created to",
+	"input.date_created": "Date created",
+	"input.from": "From",
 	"input.more_filters": "{{count}} more filters",
 	"input.placeholder": "Type your question here",
+	"input.to": "To",
 	"modal.back": "Back",
 	"resource.classification": "Classification",
 	"resource.creation": "Date of creation",
