--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -37,8 +37,13 @@
 	"generic.cancel": "Cancelar",
 	"generic.save": "Guardar",
 	"input.clear": "Borrar búsqueda",
+	"input.created_from": "Creado a partir de",
+	"input.created_to": "Creado hasta el",
+	"input.date_created": "Fecha de creacion",
+	"input.from": "Desde",
 	"input.more_filters": "{{count}} filtros más",
 	"input.placeholder": "Escribe tu pregunta aqui",
+	"input.to": "Hasta el",
 	"modal.back": "Volver",
 	"resource.classification": "Classificación",
 	"resource.creation": "Fecha de creación",
