--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -35,8 +35,13 @@
 	"generic.cancel": "Annuler",
 	"generic.save": "Enregistrer",
 	"input.clear": "Effacer la recherche",
+	"input.created_from": "Créé à partir du",
+	"input.created_to": "Créé jusqu'à",
+	"input.date_created": "Date créée",
+	"input.from": "Du",
 	"input.more_filters": "{{count}}  autres filtres",
 	"input.placeholder": "Posez votre question ici",
+	"input.to": "Jusqu'au",
 	"modal.back": "Retour",
 	"resource.classification": "Classification",
 	"resource.creation": "Date de création",
