--- a/libs/search-widget/public/i18n/pt.json
+++ b/libs/search-widget/public/i18n/pt.json
@@ -37,8 +37,13 @@
 	"generic.cancel": "Cancelar",
 	"generic.save": "Salvar",
 	"input.clear": "Limpar pesquisa",
+	"input.created_from": "Criado em",
+	"input.created_to": "Criado até",
+	"input.date_created": "Data Criada",
+	"input.from": "A partir de",
 	"input.more_filters": "{{count}} mais filtros",
 	"input.placeholder": "Digite sua pergunta aqui",
+	"input.to": "Até",
 	"modal.back": "De volta",
 	"resource.classification": "Classificação",
 	"resource.creation": "Data de criação",
