--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -785,8 +785,6 @@
 	"stash.widgets.filter.help": "Zeigt Filter in der Suchleiste an",
 	"stash.widgets.filter.label": "Filter",
 	"stash.widgets.filter_type": "Filtertypen",
-	"stash.widgets.filterByLabelFamily.help": "Diese Option ist nur wirksam, wenn die Etikettenfilterung aktiviert ist",
-	"stash.widgets.filterByLabelFamily.label": "Filtern nach Etikettenfamilie zulassen",
 	"stash.widgets.hideLogo.help": "Nuclia-Logo aus der Suchleiste ausblenden",
 	"stash.widgets.hideLogo.label": "Logo ausblenden",
 	"stash.widgets.hideSources.help": "Verstecken Sie die Quellen, die zur Generierung der Antwort verwendet wurden",
@@ -797,6 +795,7 @@
 	"stash.widgets.hint_2": "Wenn die Hintergrundfarbe Ihrer Suchseite nicht neutral ist, denken Sie daran, Ihrem Suchfeld eine Hintergrundfarbe hinzuzufügen, um die Lesbarkeit zu verbessern.",
 	"stash.widgets.knowledgeGraph.help": "Ermöglicht die Anzeige aller Beziehungen zwischen Entitäten für eine bestimmte Ressource",
 	"stash.widgets.knowledgeGraph.label": "Beziehungsdiagramm",
+	"stash.widgets.labelFamilies": "Filtern Sie nach Etikettenfamilien",
 	"stash.widgets.labels": "Nach Labels filtern",
 	"stash.widgets.navigateToFile.help": "Wenn Sie Nuclia zum Durchsuchen von Webseiten verwenden, wird durch Klicken auf ein Ergebnis die Originaldatei geöffnet, anstatt sie im Viewer anzuzeigen",
 	"stash.widgets.navigateToFile.label": "Navigieren Sie zu Dateien",
