--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -784,8 +784,6 @@
 	"stash.widgets.filter.help": "Muestra filtros en la barra de búsqueda",
 	"stash.widgets.filter.label": "Filtrar",
 	"stash.widgets.filter_type": "Tipos de filtro",
-	"stash.widgets.filterByLabelFamily.help": "Esta opción solo tiene efecto si el filtrado de etiquetas está habilitado",
-	"stash.widgets.filterByLabelFamily.label": "Permitir filtrado por familia de etiquetas",
 	"stash.widgets.hideLogo.help": "Ocultar el logotipo de Nuclia de la barra de búsqueda",
 	"stash.widgets.hideLogo.label": "Ocultar logotipo",
 	"stash.widgets.hideSources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
@@ -796,6 +794,7 @@
 	"stash.widgets.hint_2": "Si el color de fondo de su página de búsqueda no es neutral, recuerde agregar un color de fondo en su cuadro de búsqueda para que sea más fácil de leer.",
 	"stash.widgets.knowledgeGraph.help": "Permitir mostrar todas las relaciones entre entidades para un recurso determinado.",
 	"stash.widgets.knowledgeGraph.label": "Gráfico de relaciónes",
+	"stash.widgets.labelFamilies": "Filtrar por familias de etiquetas",
 	"stash.widgets.labels": "Filtrar per etiquetas",
 	"stash.widgets.navigateToFile.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
 	"stash.widgets.navigateToFile.label": "Navega hacia los archivos",
