--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -776,6 +776,7 @@
 	"stash.widgets.autofilter.help": "Détecte les entités mentionnées dans la requête de l'utilisateur et les transforme automatiquement en filtres.",
 	"stash.widgets.autofilter.label": "Filtrage automatique",
 	"stash.widgets.configuration": "Configuration du widget",
+	"stash.widgets.created": "Filtrer par date de création",
 	"stash.widgets.darkMode.help": "Activer le thème sombre sur le widget",
 	"stash.widgets.darkMode.label": "Mode sombre",
 	"stash.widgets.displayMetadata.help": "Afficher quelques métadonnées sur les résultats de recherche",
@@ -784,8 +785,6 @@
 	"stash.widgets.filter.help": "Affiche les filtres dans la barre de recherche",
 	"stash.widgets.filter.label": "Filtre",
 	"stash.widgets.filter_type": "Types de filtres",
-	"stash.widgets.filterByLabelFamily.help": "Cette option n'a d'effet que si le filtrage des étiquettes est activé",
-	"stash.widgets.filterByLabelFamily.label": "Autoriser le filtrage par famille d'étiquettes",
 	"stash.widgets.hideLogo.help": "Masquer le logo Nuclia de la barre de recherche",
 	"stash.widgets.hideLogo.label": "Masquer logo",
 	"stash.widgets.hideSources.help": "Masquer les sources utilisées pour générer la réponse",
@@ -796,6 +795,7 @@
 	"stash.widgets.hint_2": "Si la couleur d’arrière-plan de votre page de recherche n’est pas neutre, n’oubliez pas d’ajouter une couleur d’arrière-plan sur votre champ de recherche pour faciliter la lecture.",
 	"stash.widgets.knowledgeGraph.help": "Permet d'afficher toutes les relations entre entités pour une ressource donnée",
 	"stash.widgets.knowledgeGraph.label": "Graphe de relations",
+	"stash.widgets.labelFamilies": "Filtrer par familles d'étiquettes",
 	"stash.widgets.labels": "Filtrer par libellés",
 	"stash.widgets.navigateToFile.help": "Lorsque vous utilisez Nuclia pour rechercher des pages Web, cliquer sur un résultat ouvrira le fichier original plutôt que de l'afficher dans la visionneuse.",
 	"stash.widgets.navigateToFile.label": "Accédez aux fichiers",
