--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -776,6 +776,7 @@
 	"stash.widgets.autofilter.help": "Detecta entidades mencionadas na consulta do usuário e as transforma automaticamente em filtros.",
 	"stash.widgets.autofilter.label": "Filtragem automática",
 	"stash.widgets.configuration": "Configuração de widget",
+	"stash.widgets.created": "Filtrar por data de Criação",
 	"stash.widgets.darkMode.help": "Habilite o tema escuro no widget",
 	"stash.widgets.darkMode.label": "Modo escuro",
 	"stash.widgets.displayMetadata.help": "Exibir alguns metadados nos resultados da pesquisa",
@@ -784,8 +785,6 @@
 	"stash.widgets.filter.help": "Exibe filtros na barra de pesquisa",
 	"stash.widgets.filter.label": "Filtro",
 	"stash.widgets.filter_type": "Tipos de filtro",
-	"stash.widgets.filterByLabelFamily.help": "Esta opção só tem efeito se a filtragem de rótulos estiver ativada",
-	"stash.widgets.filterByLabelFamily.label": "Permitir filtragem por família de rótulos",
 	"stash.widgets.hideLogo.help": "Ocultar o logotipo da Nuclia da barra de pesquisa",
 	"stash.widgets.hideLogo.label": "Esconder logo",
 	"stash.widgets.hideSources.help": "Ocultar fontes usadas para gerar a resposta",
@@ -796,6 +795,7 @@
 	"stash.widgets.hint_2": "Se a cor de fundo da sua página de pesquisa não for neutra, lembre-se de adicionar uma cor de fundo à sua caixa de pesquisa para facilitar a leitura.",
 	"stash.widgets.knowledgeGraph.help": "Permite mostrar todas as relações entre entidades para um determinado recurso",
 	"stash.widgets.knowledgeGraph.label": "Gráfico de relações",
+	"stash.widgets.labelFamilies": "Filtrar por famílias de rótulos",
 	"stash.widgets.labels": "Filtrar por rótulos",
 	"stash.widgets.navigateToFile.help": "Ao usar o Nuclia para pesquisar páginas da web, clicar em um resultado abrirá o arquivo original em vez de renderizá-lo no visualizador",
 	"stash.widgets.navigateToFile.label": "Navegue até os arquivos",
