--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -775,6 +775,7 @@
 	"stash.widgets.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
 	"stash.widgets.autofilter.label": "Filtrat automàtic",
 	"stash.widgets.configuration": "Configuració del widget",
+	"stash.widgets.created": "Filtrar per data de creació",
 	"stash.widgets.darkMode.help": "Activa el tema fosc al giny",
 	"stash.widgets.darkMode.label": "Mode fosc",
 	"stash.widgets.displayMetadata.help": "Mostra algunes metadades als resultats de la cerca",
@@ -783,8 +784,6 @@
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.filter.label": "Filtre",
 	"stash.widgets.filter_type": "Tipus de filtre",
-	"stash.widgets.filterByLabelFamily.help": "Aquesta opció només té efecte si el filtratge d'etiquetes està habilitat",
-	"stash.widgets.filterByLabelFamily.label": "Permet el filtratge per família d'etiquetes",
 	"stash.widgets.hideLogo.help": "Amagar el logotip de Nuclia de la barra de cerca",
 	"stash.widgets.hideLogo.label": "Amagar logotip",
 	"stash.widgets.hideSources.help": "Amaga les fonts utilitzades per generar la resposta",
@@ -795,6 +794,7 @@
 	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
 	"stash.widgets.knowledgeGraph.help": "Permet mostrar totes les relacions entre entitats per a un recurs determinat",
 	"stash.widgets.knowledgeGraph.label": "Gràfic de relacions",
+	"stash.widgets.labelFamilies": "Filtrar per famílies d'etiquetes",
 	"stash.widgets.labels": "Filtrar per etiquetes",
 	"stash.widgets.navigateToFile.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà l'arxiu original en lloc de mostrar-lo al visor.",
 	"stash.widgets.navigateToFile.label": "Navega cap als arxius",
