--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -776,6 +776,7 @@
 	"stash.widgets.autofilter.help": "Detects entities mentioned in the user query and turns them automatically into filters.",
 	"stash.widgets.autofilter.label": "Automatic filtering",
 	"stash.widgets.configuration": "Widget configuration",
+	"stash.widgets.created": "Filter by creation date",
 	"stash.widgets.darkMode.help": "Enable dark theme on the widget",
 	"stash.widgets.darkMode.label": "Dark mode",
 	"stash.widgets.displayMetadata.help": "Display some metadata on the search results",
@@ -784,8 +785,6 @@
 	"stash.widgets.filter.help": "Displays filters in search bar",
 	"stash.widgets.filter.label": "Filter",
 	"stash.widgets.filter_type": "Filter types",
-	"stash.widgets.filterByLabelFamily.help": "This option only has effect if label filtering is enabled",
-	"stash.widgets.filterByLabelFamily.label": "Allow filtering by label family",
 	"stash.widgets.hideLogo.help": "Hide Nuclia logo from search bar",
 	"stash.widgets.hideLogo.label": "Hide logo",
 	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
@@ -796,6 +795,7 @@
 	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
 	"stash.widgets.knowledgeGraph.help": "Allow to show all the relations between entities for a given resource",
 	"stash.widgets.knowledgeGraph.label": "Relations graph",
+	"stash.widgets.labelFamilies": "Filter by label families",
 	"stash.widgets.labels": "Filter by labels",
 	"stash.widgets.navigateToFile.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
 	"stash.widgets.navigateToFile.label": "Navigate to files",
